# wintf-winmsg-executor

./: Cargo.toml  LICENSE-MIT  README.md
.claude/skills/karpathy-guidelines/: SKILL.md
.claude/skills/kiro-complete/: SKILL.md
.claude/skills/kiro-start/: SKILL.md
.kiro/specs/completed/windows-crate-migration/: brief.md  design.md  spec.json  tasks.md
.kiro/specs/windows-crate-migration/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
examples/: basic.rs  threads.rs
src/: lib.rs
src/util/: mod.rs  msg_filter_hook.rs  window.rs
